--- a/client/src/TinyMCE_ss4/less/desktop/Icons.less
+++ b/client/src/TinyMCE_ss4/less/desktop/Icons.less
@@ -178,3 +178,11 @@
 .@{prefix}-i-insert                { font-size: 14px; }
 .@{prefix}-i-selected              { visibility: hidden; }
 i.@{prefix}-i-backcolor            { text-shadow: none; background: @colorbtn-backcolor-bg; }
+
+// Custom colors
+.@{prefix}-menu-item:not(.@{prefix}-disabled) .@{prefix}-i-undo {
+  color: #de7765;
+}
+.@{prefix}-menu-item:not(.@{prefix}-disabled) .@{prefix}-i-redo {
+  color: #58b05f;
+}
