--- a/client/src/TinyMCE_ss4/less/desktop/ListBox.less
+++ b/client/src/TinyMCE_ss4/less/desktop/ListBox.less
@@ -24,3 +24,35 @@
   padding-right: 10px;
   padding-left: 20px;
 }
+
+
+
+
+
+
+.@{prefix}-listbox,
+.@{prefix}-menubtn.@{prefix}-btn-has-text {
+    background: #fff;
+    border-color: #cbd3e0;
+    // background-image: linear-gradient(#efefef,#fff 10%,#fff 100%);
+    &:hover,
+    &:focus {
+        border-color: #66afe9;
+    }
+    &.mce-active,
+    &:active {
+        background: #fff;
+        box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.08);
+        border-color: #66afe9;
+    }
+    &.mce-active  {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        box-shadow: none;
+    }
+}
+
+.@{prefix}-menu {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
